# open-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: cli.h  util.h
include/commands/: create.h  delete.h  edit.h  list.h
src/: cli.cpp  main.cpp  util.cpp
src/commands/: create.cpp  delete.cpp  edit.cpp  list.cpp
